# clearxr-server

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
clearxr-dashboard/: Cargo.toml  screenshot.ps1
clearxr-dashboard/src/: config.rs  dashboard.rs  fallback_session.rs  game_scanner.rs  input_pipe.rs  lib.rs  notifications.rs  renderer.rs  screen_capture.rs  shm.rs
clearxr-layer/: AGENTS.md  Cargo.toml  clear-xr-layer.json
clearxr-layer/src/: lib.rs  opaque.rs  overlay.rs  renderer.rs  vk_backend.rs
clearxr-space/: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  build.rs
clearxr-space/.claude/: settings.local.json
clearxr-space/docs/: README.md  clearxr-space-product-review-and-roadmap.md  track-01-runtime-foundation-execution.md  track-01-runtime-foundation.md  track-02-interaction-model-execution.md  track-02-interaction-model.md  track-03-launcher-and-app-model-execution.md  track-03-launcher-and-app-model.md  track-04-settings-truthfulness-execution.md  track-04-settings-truthfulness.md  track-05-ui-stack-and-surface-strategy-execution.md  track-05-ui-stack-and-surface-strategy.md  track-06-product-framing-and-acceptance-execution.md  track-06-product-framing-and-acceptance.md
clearxr-space/shaders/: egui.frag  egui.frag.spv  egui.vert  egui.vert.spv  panel.frag  panel.frag.spv  panel.vert  panel.vert.spv  scene.frag  scene.frag.spv  scene.vert  scene.vert.spv
clearxr-space/src/: audio.rs  desktop_session.rs  game_scanner.rs  launcher_panel.rs  main.rs  mirror_window.rs  renderer.rs  screen_capture.rs  ui_renderer.rs  vk_backend.rs  xr_session.rs
clearxr-space/src/app/: mod.rs
clearxr-space/src/capture/: mod.rs  screen_capture.rs  screenshot.rs
clearxr-space/src/config/: mod.rs
clearxr-space/src/input/: dispatcher.rs  mod.rs
clearxr-space/src/panel/: mod.rs
clearxr-space/src/shell/: boundary.rs  dashboard.rs  mod.rs  notifications.rs
clearxr-space/src/ui/: egui_gpu_renderer.rs  egui_panel_renderer.rs  egui_renderer.rs  mod.rs  ui_renderer.rs
clearxr-space/ui/: keyboard.html  launcher-v2.html  launcher.html  mockup-artgrid.html  mockup-brutalist.html  mockup-carousel.html  mockup-command.html  mockup-deck.html  mockup-editorial.html  mockup-focus.html  mockup-hex.html  mockup-hud.html  mockup-neon.html  mockup-orbit.html  mockup-spatial.html  mockup-stack.html  mockup-theater.html  mockup-wheel.html  settings.html  system-tray.html
clearxr-streamer/: Cargo.toml  build.rs  tauri.conf.json
clearxr-streamer/capabilities/: default.json
clearxr-streamer/src/: app_state.rs  bonjour.rs  cloudxr.rs  commands.rs  dashboard_service.rs  job_object.rs  lib.rs  main.rs  models.rs  openxr_registration.rs  protocol.rs  qr.rs  server_id.rs  session_management.rs  settings.rs
scripts/: build-release-zip.ps1  build-vendor.ps1
ui/: app.js  index.html  styles.css
xtask/src/: main.rs
