[package]
name = "clear-xr-layer"
version = "0.1.0"
edition = "2021"
description = "OpenXR API layer — thin overlay that reads dashboard frames from shared memory"

[lib]
crate-type = ["cdylib"]
name = "clear_xr_layer"

[dependencies]
anyhow = "1"
openxr-sys = "0.10"
ash = "0.38"
log = "0.4"
env_logger = "0.11"
shared_memory = "0.12"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
